change teady to cricket

--- a/pages/products.html
+++ b/pages/products.html
@@ -252,7 +252,7 @@
                   </div>
                   <div class="detail-box">
                     <h6>
-                      Teddy Bear
+                     Cricket
                     </h6>
                     <h6>
                       Price
